# _agent_blueprint

./: .env.example  .gitignore  .shellcheckrc  AGENTS.md  LICENSE  Makefile  README.md  compose.yaml  project-spec.example.yaml  project-spec.schema.yaml  项目初始化操作手册.md
doc/: Docker_PostgreSQL_Redis_项目模板手册.md  GitHub_Gitee_SSH密钥配置一页式教程.md  README.md  任务执行与交付验收准则.md  任务结果输出模板.md  任务输入模板.md  使用总览导航.md  开发环境知识库总目录.md  文档命名与目录规范.md  最小维护说明.md  防止重装丢代码与Git远程同步手册.md
doc/01-onboarding/: 使用总览导航.md  常见问题与失败处理.md  模板案例总览.md  能力边界与支持范围.md
doc/02-workflow/: 任务执行与交付验收准则.md  任务结果输出模板.md  任务输入模板.md
doc/03-reference/: Python项目标准模板手册.md  WSL_Ubuntu_开发环境完整教材.md  开发环境知识库总目录.md  新电脑开发环境一页式速查清单.md
scripts/: bootstrap.sh  check-env.sh  dev.sh  init-project.sh  lint.sh  scaffold.sh  setup.sh  smoke-test.sh  sync-lib.sh  test.sh  validate-spec.sh
templates/fastapi-postgres-redis/: .env.example  .gitignore  AGENTS.md  Makefile  README.md  compose.yaml  pyproject.toml
templates/fastapi-postgres-redis-alembic/: AGENTS.md  Makefile  README.md  compose.yaml  pyproject.toml
templates/fastapi-postgres-redis-alembic/alembic/: env.py
templates/fastapi-postgres-redis-alembic/alembic/versions/: 0001_create_items_table.py  0002_create_users_table.py
templates/fastapi-postgres-redis-alembic/scripts/: bootstrap.sh  check-env.sh  dev.sh  migrate.sh
templates/fastapi-postgres-redis-alembic/src/app/: __init__.py  config.py  crud.py  db.py  main.py  models.py  schemas.py
templates/fastapi-postgres-redis-alembic/tests/: test_health.py  test_users.py
templates/fastapi-postgres-redis/scripts/: bootstrap.sh  check-env.sh  dev.sh  test.sh
templates/fastapi-postgres-redis/src/app/: __init__.py  config.py  main.py
templates/react-fastapi-postgres-redis/backend/: pyproject.toml
templates/react-fastapi-postgres-redis/backend/src/app/: config.py  main.py
templates/react-fastapi-postgres-redis/backend/tests/: test_health.py
(+27 files in other folders)
