[project]
name = "fastapi-postgres-redis-alembic-template"
version = "0.1.0"
description = "A FastAPI template with SQLAlchemy, Alembic, PostgreSQL and Redis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.4.0",
  "redis>=5.0.0",
  "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"