[project]
name = "fastapi-postgres-redis-template"
version = "0.1.0"
description = "A FastAPI template with PostgreSQL and Redis for local development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
  "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"